<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opciones"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnTexto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opctexto" />

            <Button
                android:id="@+id/btnBoton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opcbotones" />

            <Button
                android:id="@+id/btnWidgets"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opcwidgets" />

            <Button
                android:id="@+id/btnLayouts"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opclayouts" />

            <Button
                android:id="@+id/btnContainers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opccontainers" />

            <Button
                android:id="@+id/btnHelpers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opchelpers" />

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opcgoogle" />

            <Button
                android:id="@+id/btnLegacy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opclegacy" />

            <Button
                android:id="@+id/btnAcercade"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opcacercade" />

            <Button
                android:id="@+id/btnSalida"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:backgroundTint="#eb2d2a"
                android:layout_gravity="center"
                android:text="@string/opcsalir" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>