<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helpers"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <Button
                android:id="@+id/btnGroupMenuHelpers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/red"
                android:text="@string/group"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnFlowMenuHelpers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/red"
                android:text="@string/flow"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnMockviewMenuHelpers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/red"
                android:text="@string/mockview"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnGuidelineMenuHelpers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/red"
                android:text="@string/guideline"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnHregresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/red"
                android:text="@string/Lregresar"
                android:textColor="#000000"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>