<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Widgets">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/WPag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Wpaginaweb"
            android:gravity="center"
            />
        <Button
            android:id="@+id/Wvid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WVideo"
            android:gravity="center"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="5" />
        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible"
            tools:visibility="visible" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="284dp" />

        <Button
            android:id="@+id/Wvolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Wregresar"
            android:gravity="center"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>